# dds-ishapes

./: BouncingShapeDynamics.hpp  CMakeLists.txt  DDSShapeDynamics.hpp  FilterDialog.hpp  README.md  ReaderQosDialog.cpp  ReaderQosDialog.hpp  ShapesDialog.cpp  ShapesDialog.hpp  ShapesWidget.cpp  ShapesWidget.hpp  Square.hpp  WriterQosDialog.cpp  WriterQosDialog.hpp  config.hpp  iShapesForm.ui  ishape.idl  ishape.qrc  main.cpp  readerQosForm.ui  readerqos.pro  topic-traits.hpp  writerQosForm.ui
macos/: filterForm.ui  iShapesForm-small.ui  iShapesFormWide.ui  qosForm.ui  readerQosForm.ui  writerQosForm.ui
